--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.example.vivek.codifyname"
+        applicationId "com.codify.vivek.codifyname"
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 1
